Revamped RPC based upon changes to Reflect

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,7 +13,7 @@ target_link_libraries( rpcs ${libraries} )
 add_executable( rpcc  rpc_client.cpp  )
 target_link_libraries( rpcc ${libraries} )
 
-add_executable( jsonc  json_client.cpp  )
-target_link_libraries( jsonc ${libraries} )
-add_executable( jsons  json_echo_server.cpp  )
-target_link_libraries( jsons ${libraries} )
+#add_executable( jsonc  json_client.cpp  )
+#target_link_libraries( jsonc ${libraries} )
+#add_executable( jsons  json_echo_server.cpp  )
+#target_link_libraries( jsons ${libraries} )
