Json RPC with signals works.
TODO: clean up debug statements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,7 @@ add_subdirectory( examples)
 SET( libraries boost_json )
 SET( sources 
     src/json/tcp/connection.cpp
-    src/json/client.cpp
-    src/json/server.cpp
+    src/json/connection.cpp
     src/json/tcp/server.cpp
              )
 
