--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,6 +8,10 @@ SET( libraries
     ${Boost_SYSTEM_LIBRARY} 
     ${Boost_SIGNALS_LIBRARY})
 
+IF(UNIX) 
+    set( libraries ${libraries} pthread )
+ENDIF(UNIX)
+
 add_executable( rpcs  rpc_server.cpp  )
 target_link_libraries( rpcs ${libraries} )
 add_executable( rpcc  rpc_client.cpp  )
