Ignoring vim swap files

--- a/include/boost/rpc/json/.gitignore
+++ b/include/boost/rpc/json/.gitignore
@@ -1,1 +1,10 @@
 /*.swp
+/*.swo
+/*.swm
+/*.swn
+/.client.hpp.swj
+/.client.hpp.swk
+/.client.hpp.swl
+/.connection.hpp.swk
+/.connection.hpp.swl
+/.value.hpp.swl
