Adding support for json-rpc over http

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories( ../reflect/include )
 include_directories( ../context/include )
 include_directories( ../move/include )
 include_directories( ../atomic/include )
+include_directories( ../network/include )
 
 add_subdirectory( examples )
 add_subdirectory( tests )
@@ -16,8 +17,11 @@ SET( sources
         src/json/client_base.cpp
         src/json/value.cpp
         src/json/tcp_server.cpp
+        src/json/http_server.cpp
+        src/json/http_client_base.cpp
 
         src/http/file_handler.cpp
+        src/http/path_handler.cpp
         src/http/mime_types.cpp
         src/http/reply.cpp
         src/http/request_parser.cpp
