--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,6 +3,8 @@ SET( libraries
     mace_cmt
     mace_rpc
     boost_context 
+    pthread
+    ${rt_library}
     ${Boost_THREAD_LIBRARY} 
     ${Boost_ASIO_LIBRARY} 
     ${Boost_SYSTEM_LIBRARY} 
